Fixes
Make sure the element is hidden and not offscreen when inactive
fix close icon negative margins
Add content in right & bottom examples
Re-fix bottom offcanvas height not to cover all viewport

--- a/scss/_offcanvas.scss
+++ b/scss/_offcanvas.scss
@@ -18,8 +18,8 @@
   padding: $offcanvas-padding-y $offcanvas-padding-x;
 
   .close {
-    padding: ($offcanvas-padding-y) ($offcanvas-padding-x / 2);
-    margin: (-$offcanvas-padding-y * 2) (-$offcanvas-padding-x) (-$offcanvas-padding-y) auto;
+    padding: ($offcanvas-padding-y / 2) ($offcanvas-padding-x / 2);
+    margin: (-$offcanvas-padding-y) (-$offcanvas-padding-x) (-$offcanvas-padding-y) auto;
   }
 }
 
@@ -31,20 +31,21 @@
 .offcanvas-left {
   top: 0;
   left: 0;
-  width: $offcanvas-width;
+  width: $offcanvas-horizontal-width;
   transform: translateX(-100%);
 }
 
 .offcanvas-right {
   top: 0;
   right: 0;
-  width: $offcanvas-width;
+  width: $offcanvas-horizontal-width;
   transform: translateX(100%);
 }
 
 .offcanvas-bottom {
   right: 0;
   left: 0;
+  height: $offcanvas-vertical-height;
   max-height: 100%;
   transform: translateY(100%);
 }
