--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1437,7 +1437,8 @@ $btn-close-white-filter:     invert(1) grayscale(100%) brightness(200%) !default
 $offcanvas-padding-y:               $modal-inner-padding !default;
 $offcanvas-padding-x:               $modal-inner-padding !default;
 
-$offcanvas-width:                   400px !default;
+$offcanvas-horizontal-width:        400px !default;
+$offcanvas-vertical-height:         30vh !default;
 $offcanvas-transition-duration:     .3s !default;
 
 $offcanvas-border-color:            $modal-content-border-color !default;
